--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ Jinja2==3.1.6
 joblib==1.5.2
 jupyter_client==8.6.3
 jupyter_core==5.9.1
+kagglehub==0.3.13
 kiwisolver==1.4.9
 llvmlite==0.44.0
 MarkupSafe==3.0.3
@@ -52,6 +53,7 @@ pydantic_core==2.41.5
 Pygments==2.19.2
 pyparsing==3.2.5
 python-dateutil==2.9.0.post0
+python-dotenv==1.2.1
 pytz==2025.2
 PyWavelets==1.9.0
 PyYAML==6.0.3
